# ok-detection

./: .gitignore  README.md  main.py  pyproject.toml
datasets/: data.yaml
datasets/test/labels/: 4a418fbf-ok20.txt  57bdd64c-ok15.txt  c90784cc-ok13.txt  df9529c4-ok16.txt  ef45b49a-ok17.txt  f93949ef-ok6.txt
datasets/train/labels/: 3eacf686-ok8.txt  54e5bed8-ok5.txt  5c85ed2e-ok2.txt  5f6838a9-ok4.txt  720417cb-ok12.txt  8860ab67-ok11.txt  aad3e352-ok9.txt  e3cc6325-ok14.txt
datasets/valid/labels/: 5be2d5cc-ok1.txt  6af67559-ok3.txt  8f701611-ok10.txt  91e5031e-ok18.txt  a38e2ae0-ok7.txt  c2f2b573-ok19.txt
docs/: OK-detection-summary.pages  SUMMARY.md
